fixed another bug where bottom of main was hidden by footer. added mb to main

--- a/second/style.css
+++ b/second/style.css
@@ -7,6 +7,7 @@ body {
 
 .main {
 	padding: 20px;
+	margin-bottom: 8%;
 
 }
 
